# mo-guiji

./: .gitignore  README.md
AgentDoG/: .gitmodules  README.md
AgentDoG/Online Agentic Guardrail/: README.zh-CN.md  pyproject.toml
AgentDoG/Online Agentic Guardrail/guardrail/: __init__.py  evaluator.py  guardrail.json  inspections.html  prompt.py  proxy.py  runner.py  server.py  watcher.py  ws_proxy.py
AgentDoG/Online Agentic Guardrail/hook/: HOOK.md  config.json
AgentDoG/Online Agentic Guardrail/plugin/: openclaw.plugin.json
guardrail-dashboard/: README.md  next.config.ts  package-lock.json  (+1 more)
online-guardrail/: AGENTDOG-XAI.md  DESIGN.md  LIVE-DEMO.md  MO-GUIJI.md  README.md  deploy.sh  pyproject.toml
online-guardrail/guardrail/: __init__.py  __main__.py  agentdog_l2.py  bridge.py  cascade.py  cli.py  codeshield_bridge.py  config.py  dashboard.html  evaluator.py  finegrained.py  l1_rules.json  l1_rules.py  mock_evaluator.py  prompt.py  risk_scoring.py  server.py  trajectory.py  types.py  xai_bridge.py
online-guardrail/hook/: handler.ts
online-guardrail/plugin/: index.js
online-guardrail/samples/: l1-test-write-eval.json
online-guardrail/samples/demo-session/: guardrail_report.json  session_events.jsonl
online-guardrail/samples/live-sim/agents/demo-agent/sessions/: guardrail_report.json  live_demo.jsonl
online-guardrail/samples/trajectories/: traj-7f3a2b.json  traj-safe-01.json
online-guardrail/samples/xai/: exfil-chain.json
online-guardrail/scripts/: run_xai_attribution.ps1  simulate_live_agent.py  test_l1_rules.py  test_risk_scoring.py
(+87 files in other folders)
